--- a/ansible/install_applications/vars/home-frigate.yml
+++ b/ansible/install_applications/vars/home-frigate.yml
@@ -45,6 +45,8 @@ frigate:
     shm_size: "{{ frigate_container_shm_size | default('64Mi') }}"
     mount_usb: "{{ frigate_container_mount_usb | default(False) }}"
     node_selectors: "{{ frigate_container_node_selectors | default({}) }}"
+    storage:
+      config: "{{ frigate_container_storage_config | default('32M') }}"
 
   context_root: "{{ frigate_context_root | default('') }}"
 
