--- a/ansible/install_applications/vars/infra-blocky.yml
+++ b/ansible/install_applications/vars/infra-blocky.yml
@@ -63,6 +63,8 @@ blocky_pgsql:
     requests_memory: "{{ blocky_pgsql_container_requests_memory | default('128Mi') }}"
     limits_cpu: "{{ blocky_pgsql_container_limits_cpu | default('150m') }}"
     limits_memory: "{{ blocky_pgsql_container_limits_memory | default('128Mi') }}"
+    storage:
+      data: "{{ blocky_pgsql_container_storage_data | default('256M') }}"
 
   user: "{{ blocky_pgsql_user | default('blocky') }}"
   database: "{{ blocky_pgsql_database | default('blocky') }}"
@@ -98,6 +100,8 @@ blocky_redis:
     requests_memory: "{{ blocky_redis_container_requests_memory | default('32Mi') }}"
     limits_cpu: "{{ blocky_redis_container_limits_cpu | default('75m') }}"
     limits_memory: "{{ blocky_redis_container_limits_memory | default('32Mi') }}"
+    storage:
+      data: "{{ blocky_redis_container_storage_data | default('32M') }}"
   
   persistance_enabled: False
   health_username: "{{ blocky_redis_health_username | default('health') }}"
