--- a/ansible/install_applications/vars/monitoring-grafana.yml
+++ b/ansible/install_applications/vars/monitoring-grafana.yml
@@ -28,6 +28,8 @@ grafana:
     requests_memory: "{{ grafana_container_requests_memory | default('100Mi') }}"
     limits_cpu: "{{ grafana_container_limits_cpu | default('400m') }}"
     limits_memory: "{{ grafana_container_limits_memory | default('200Mi') }}"
+    storage:
+      data: "{{ grafana_container_storage_data | default('128M') }}"
 
   context_root: "{{ grafana_context_root | default('') }}"
   admin:
