--- a/ansible/install_applications/vars/stream-airsonic.yml
+++ b/ansible/install_applications/vars/stream-airsonic.yml
@@ -41,6 +41,9 @@ airsonic:
     requests_memory: "{{ airsonic_container_requests_memory | default('512Mi') }}"
     limits_cpu: "{{ airsonic_container_limits_cpu | default('1000m') }}"
     limits_memory: "{{ airsonic_container_limits_memory | default('512Mi') }}"
+    storage:
+      data: "{{ airsonic_container_storage_data | default('256M') }}"
+      playlists: "{{ airsonic_container_storage_playlists | default('256M') }}"
 
   context_root: "{{ airsonic_context_root | default('') }}"
   extra_java_opts: "{{ airsonic_extra_java_opts | default(airsonic_extra_java_opts_default) }}"
