--- a/ansible/install_infra/roles/kubernetes_node_postinstall/tasks/main.yml
+++ b/ansible/install_infra/roles/kubernetes_node_postinstall/tasks/main.yml
@@ -41,7 +41,7 @@
     current_node_taints: "{{ (current_node_info_results.stdout | from_yaml).spec.taints | default([]) }}"
 
 - name: Tag node
-  ansible.builtin.command: kubectl {{ hostvars[groups.controller | first].kubectl_params }} label nodes {{ ansible_hostname | lower }} --overwrite=true {{ item.name }}={{ item.value }}
+  ansible.builtin.command: kubectl {{ hostvars[groups.controller | first].kubectl_params }} label nodes {{ ansible_hostname | lower }} --overwrite=true {{ item.name }}={{ item.value | quote }}
   delegate_to: "{{ groups.controller | first }}"
   with_items: "{{ kubernetes_node_labels | default([]) }}"
   when: (item.name not in current_node_tags) or (item.value != current_node_tags[item.name])
