--- a/ansible/inventories/vagrant/host_vars/master-test-1/kubernetes-postinstall.yml
+++ b/ansible/inventories/vagrant/host_vars/master-test-1/kubernetes-postinstall.yml
@@ -12,6 +12,22 @@ kubernetes_node_labels:
     value: "no"
   - name: capability/tpu
     value: "no"
+  - name: node.longhorn.io/create-default-disk
+    value: "config"
+
+kubernetes_node_annotations:
+  - name: node.longhorn.io/default-disks-config
+    value: >-
+      [
+        {   
+            "name": "ssd-1", 
+            "path": "/data/longhorn/ssd-1",
+            "allowScheduling": true,
+            "tags": [
+                "ssd"
+            ]
+        }
+      ]
 
 kubernetes_node_taints:
   - key: node-role.kubernetes.io/master
