--- a/ansible/install_infra/roles/kubernetes_node_preinstall/defaults/main.yml
+++ b/ansible/install_infra/roles/kubernetes_node_preinstall/defaults/main.yml
@@ -16,4 +16,5 @@ kubernetes_kubelet_system_reserved_memory: 512M
 
 kubernetes_kubelet_extra_parameters:
   - "--node-ip {{ kubernetes_kubelet_ip}}"
+  # TODO after upgrading to kubernetes 1.25, remove the deprecated --system-reserved and use kuberletconfiguration patches
   - "--system-reserved=cpu={{ kubernetes_kubelet_system_reserved_cpu }},memory={{ kubernetes_kubelet_system_reserved_memory }}"
