Add Longhorn URL to Homer

--- a/ansible/inventories/vagrant/group_vars/all/apps/tool-homer.yml
+++ b/ansible/inventories/vagrant/group_vars/all/apps/tool-homer.yml
@@ -26,6 +26,10 @@ homer_config_services:
         logo: "assets/dashboard-icons/svg/kubernetes.svg"
         url: "https://kube.infra.intra.{{ web_base_domain }}{{ kubernetes_dashboard.context_root }}"
         target: "_blank"
+      - name: "Longhorn UI"
+        logo: "assets/dashboard-icons/png/longhorn.png"
+        url: "https://longhorn.infra.intra.{{ web_base_domain }}"
+        target: "_blank"
       - name: "Docker Registry UI"
         logo: "assets/dashboard-icons/svg/docker.svg"
         url: "https://docker-registry-ui.infra.intra.{{ web_base_domain }}{{ docker_registry_ui.context_root }}"
