--- a/ansible/install_applications/vars/infra-unifi.yml
+++ b/ansible/install_applications/vars/infra-unifi.yml
@@ -25,8 +25,9 @@ unifi:
       - name: unifi
         type: statefulset
         replicas: 1
-    gluster_volumes:
-      - unifi-data
+    longhorn_volumes:
+      - volume_name: unifi-data
+        pvc_name: unifi-pv-claim-unifi-0
 
   labels_def:
     app.kubernetes.io/name: unifi
