Migrate download-sickchill volume to Longhorn

--- a/ansible/install_applications/vars/download-sickchill.yml
+++ b/ansible/install_applications/vars/download-sickchill.yml
@@ -28,8 +28,9 @@ sickchill:
       - name: sickchill
         type: statefulset
         replicas: 1
-    gluster_volumes:
-      - sickchill-data
+    longhorn_volumes:
+      - volume_name: sickchill-data
+        pvc_name: sickchill-data-pv-claim-sickchill-0
 
   labels_def:
     app.kubernetes.io/name: sickchill
