--- a/ansible/inventories/vagrant/group_vars/all/storage.yml
+++ b/ansible/inventories/vagrant/group_vars/all/storage.yml
@@ -1,12 +1,2 @@
 ---
-glusterfs_volumes:
-  sabnzbd-config:
-    replicas: 2
-    capacity: 32M
-    arbiterCapacity: 16M
-    nodes: [master-test-2, master-test-3]
-    arbiters: [master-test-1]
-    reclaim_policy: Retain
-    labels:
-      app.kubernetes.io/name: sabnzbd
-      app.kubernetes.io/component: sabnzbd
+glusterfs_volumes: []
