--- a/ansible/install_applications/roles/download_deluge_deploy/tasks/main.yml
+++ b/ansible/install_applications/roles/download_deluge_deploy/tasks/main.yml
@@ -5,11 +5,12 @@
     application_namespace: "{{ deluge.namespace }}"
     create_nfs_pvc: [ nfs-download ]
 
-- name: Deploy Deluge backup script
-  ansible.builtin.import_tasks: ../../app_base_deploy/tasks/backup.yml
-  vars:
-    app_backup: "{{ deluge.app_backup }}"
-  tags: backup
+# TODO : we can't mount a Longhorn RWX volume to back it up :/
+#- name: Deploy Deluge backup script
+#  ansible.builtin.import_tasks: ../../app_base_deploy/tasks/backup.yml
+#  vars:
+#    app_backup: "{{ deluge.app_backup }}"
+#  tags: backup
 
 - name: Ensure BusyBox image is up-to-date in the private registry
   ansible.builtin.import_tasks: ../../app_base_deploy/tasks/container-image-private-registry.yml
